cambios en los nombres de ficheros

--- a/CPP_00/ex00/Makefile
+++ b/CPP_00/ex00/Makefile
@@ -3,7 +3,7 @@ NAME = megaphone
 CXX = c++
 CFLAGS = -Wall -Wextra -Werror -std=c++98
 
-FILES = megaphone.cpp
+FILES = Megaphone.cpp
 
 OBJS = $(FILES:.cpp=.o)
 
