CPP01/ex04 empezado

--- a/CPP_01/ex04/Makefile
+++ b/CPP_01/ex04/Makefile
@@ -1,9 +1,9 @@
 
-NAME = ex04
+NAME = file
 CXX = c++
 CFLAGS = -Wall -Wextra -Werror -std=c++98
 
-FILES = 
+FILES = main.cpp Replace.cpp
 
 OBJS = $(FILES:.cpp=.o)
 
