--- a/CPP_00/ex00/Makefile
+++ b/CPP_00/ex00/Makefile
@@ -1,3 +1,14 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: pmendez- <marvin@42.fr>                    +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2025/10/15 20:42:43 by pmendez-          #+#    #+#              #
+#    Updated: 2025/10/15 20:42:45 by pmendez-         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
 
 NAME = megaphone
 CXX = c++
