--- a/CPP_00/ex02/Makefile
+++ b/CPP_00/ex02/Makefile
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: pmendez- <marvin@42.fr>                    +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2025/10/15 21:07:45 by pmendez-          #+#    #+#              #
+#    Updated: 2025/10/15 21:07:46 by pmendez-         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 NAME = account
 CXX = c++
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
