--- a/CPP_00/ex01/Makefile
+++ b/CPP_00/ex01/Makefile
@@ -3,28 +3,37 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: pmendez- <marvin@42.fr>                    +#+  +:+       +#+         #
+#    By: pmendez- <pmendez-@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/10/15 21:06:27 by pmendez-          #+#    #+#              #
-#    Updated: 2025/10/15 21:06:29 by pmendez-         ###   ########.fr        #
+#    Updated: 2025/10/17 22:50:46 by pmendez-         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = phoneBook
 CXX = c++
-CFLAGS = -Wall -Wextra -Werror -std=c++98
+CXXFLAGS = -Wall -Wextra -Werror -std=c++98
+OBJ_DIR = obj
 
 FILES = PhoneBook.cpp Contact.cpp main.cpp Utils.cpp
-OBJS = $(FILES:.cpp=.o)
+
+OBJS = $(addprefix $(OBJ_DIR)/, $(notdir $(FILES:.cpp=.o)))
 
 all: $(NAME)
 
+$(OBJ_DIR):
+	@mkdir -p $(OBJ_DIR)
+
 $(NAME): $(OBJS) 
-	@$(CXX) $(CFLAGS) $(OBJS) -o $(NAME)
+	@$(CXX) $(OBJS) $(CXXFLAGS) -o $(NAME)
 	@echo " Compilation finished! 👍"
+
+$(OBJ_DIR)/%.o: %.cpp $(OBJ_DIR)
+	@$(CXX) $(CXXFLAGS) -c $< -o $@
 
 clean:
 	@rm -f $(OBJS)
+	@rmdir --ignore-fail-on-non-empty $(OBJ_DIR) 2> /dev/null || true
 	@echo "Cleaning finished! 🧹"
 
 fclean: clean
