--- a/CPP_03/ex00/Makefile
+++ b/CPP_03/ex00/Makefile
@@ -1,3 +1,14 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: pmendez- <marvin@42.fr>                    +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2025/10/17 21:37:34 by pmendez-          #+#    #+#              #
+#    Updated: 2025/10/17 21:37:40 by pmendez-         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
 
 NAME = clapTrap
 CXX = c++
