avance en el ultimo ejercicio. No termino de entenderlo

--- a/CPP_04/ex03/Makefile
+++ b/CPP_04/ex03/Makefile
@@ -2,7 +2,9 @@ NAME = interface
 CXX = c++
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98 -MDD -MP
 
-FILES = main.cpp
+FILES = main.cpp \
+	AMateria.cpp \
+	Ice.cpp \
 OBJ_DIR = obj
 OBJS = $(addprefix $(OBJ_DIR)/, $(notdir $(FILES:.cpp=.o)))
 DEPS = $(addprefix $(OBJ_DIR)/, $(notdir $(FILES:.cpp=.d)))
