--- a/CPP_05/ex00/Makefile
+++ b/CPP_05/ex00/Makefile
@@ -1,8 +1,8 @@
 NAME = bureaucrat
 CXX = c++
-CXXFLAGS = -Wall -Wextra -Werror -std=c++98 -fsanitize=address,leak #-MDD -MP
+CXXFLAGS = -Wall -Wextra -Werror -std=c++98 #-fsanitize=address,leak #-MDD -MP
 
-FILES = main.cpp bureaucrat.cpp
+FILES = main.cpp Bureaucrat.cpp
 
 OBJ_DIR = obj
 OBJS = $(addprefix $(OBJ_DIR)/, $(notdir $(FILES:.cpp=.o)))
