avances en el conversor de numeros del CPP 06, ejercicio 0

--- a/CPP_06/ex00/Makefile
+++ b/CPP_06/ex00/Makefile
@@ -6,7 +6,7 @@
 #    By: pmendez- <pmendez-@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/10/15 20:42:43 by pmendez-          #+#    #+#              #
-#    Updated: 2026/02/16 20:34:56 by pmendez-         ###   ########.fr        #
+#    Updated: 2026/02/22 16:59:40 by pmendez-         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,7 +15,7 @@ CXX = c++
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98 -MMD -MP
 OBJ_DIR = obj
 
-FILES = Conversion.cpp
+FILES = ScalarConverter.cpp main.cpp
 
 OBJS = $(addprefix $(OBJ_DIR)/, $(notdir $(FILES:.cpp=.o)))
 DEPS = $(addprefix $(OBJ_DIR)/, $(notdir $(FILES:.cpp=.d)))
